[gd_scene load_steps=6 format=3 uid="uid://chx2gfya25vkc"]

[ext_resource type="Script" uid="uid://bom206aomgjy5" path="res://scenes/tutorial.gd" id="1_c13y7"]
[ext_resource type="PackedScene" uid="uid://bold22vhsyo8q" path="res://scenes/tutorial_001_intro.tscn" id="2_8ho6b"]
[ext_resource type="PackedScene" uid="uid://bejqrbt876jdl" path="res://scenes/tutorial_002.tscn" id="3_ph3nu"]
[ext_resource type="PackedScene" uid="uid://djhsfawi8fbmt" path="res://scenes/tutorial_999_outro.tscn" id="4_4kmhl"]
[ext_resource type="PackedScene" uid="uid://dfpu4utbaxbvj" path="res://scenes/tutorial_003.tscn" id="4_cq4me"]

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c13y7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TutorialContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Tutorial001_Intro" parent="VBoxContainer/TutorialContainer" instance=ExtResource("2_8ho6b")]
layout_mode = 2

[node name="Tutorial002" parent="VBoxContainer/TutorialContainer" instance=ExtResource("3_ph3nu")]
visible = false
layout_mode = 2

[node name="Tutorial003" parent="VBoxContainer/TutorialContainer" instance=ExtResource("4_cq4me")]
visible = false
layout_mode = 2

[node name="Tutorial999_Outro" parent="VBoxContainer/TutorialContainer" instance=ExtResource("4_4kmhl")]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2

[node name="PreviousButton" type="Button" parent="VBoxContainer/MarginContainer/CenterContainer/Buttons"]
visible = false
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Précédent"

[node name="NextButton" type="Button" parent="VBoxContainer/MarginContainer/CenterContainer/Buttons"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
text = "Suivant"

[connection signal="pressed" from="VBoxContainer/MarginContainer/CenterContainer/Buttons/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/CenterContainer/Buttons/NextButton" to="." method="_on_next_button_pressed"]
